--- a/SparkDynamicTheme/packages.config
+++ b/SparkDynamicTheme/packages.config
@@ -1,8 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="BundleTransformer.Core" version="1.6.13" targetFramework="net45" />
+  <package id="BundleTransformer.Yui" version="1.6.13" targetFramework="net45" />
   <package id="CommonServiceLocator" version="1.0" targetFramework="net45" />
+  <package id="EcmaScript.Net" version="1.0.1.0" targetFramework="net45" />
+  <package id="Iesi.Collections" version="3.2.0.4000" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="4.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="2.0.20710.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Web.Optimization" version="1.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi" version="4.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Client" version="4.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Core" version="4.0.20710.0" targetFramework="net45" />
@@ -16,4 +21,6 @@
   <package id="structuremap" version="2.6.4.1" targetFramework="net45" />
   <package id="StructureMap.MVC4" version="2.6.4.1" targetFramework="net45" />
   <package id="WebActivator" version="1.5.2" targetFramework="net45" />
+  <package id="WebGrease" version="1.1.0" targetFramework="net45" />
+  <package id="YUICompressor.NET" version="2.2.0.0" targetFramework="net45" />
 </packages>
