--- a/SparkDynamicTheme/SparkDynamicTheme.csproj
+++ b/SparkDynamicTheme/SparkDynamicTheme.csproj
@@ -64,6 +64,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Newtonsoft.Json.4.5.11\lib\net40\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="NLog">
+      <HintPath>..\packages\NLog.2.0.0.2000\lib\net40\NLog.dll</HintPath>
+    </Reference>
     <Reference Include="Spark">
       <HintPath>..\packages\Spark.1.7.5.0\lib\NET40\Spark.dll</HintPath>
     </Reference>
@@ -135,6 +138,12 @@
       <Private>True</Private>
       <HintPath>..\packages\Microsoft.AspNet.WebPages.2.0.20710.0\lib\net40\System.Web.WebPages.Razor.dll</HintPath>
     </Reference>
+    <Reference Include="this.Log">
+      <HintPath>..\packages\this.Log.0.0.2.0\lib\net40\this.Log.dll</HintPath>
+    </Reference>
+    <Reference Include="this.Log-NLog">
+      <HintPath>..\packages\this.Log-NLog.0.0.2.0\lib\net40\this.Log-NLog.dll</HintPath>
+    </Reference>
     <Reference Include="WebActivator">
       <HintPath>..\packages\WebActivator.1.5.2\lib\net40\WebActivator.dll</HintPath>
     </Reference>
@@ -146,6 +155,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="App_Start\LoggingConfig.cs" />
     <Compile Include="App_Start\SparkWebMvc.cs" />
     <Compile Include="App_Start\StructuremapMvc.cs" />
     <Compile Include="Constants.cs" />
@@ -159,6 +169,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Infrastructure\Spark\CustomThemeFilter.cs" />
+    <Compile Include="LogExtensions.cs" />
     <Compile Include="Models\DataModels.cs" />
     <Compile Include="Models\DisplayForm.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
